manifests/consuela-namespace.yml
kind: Namespace
apiVersion: v1
metadata:
  name: consuela
  labels:
    name: consuela
