manifests/ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: consuela
  namespace: consuela
  labels:
    app: consuela
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "consuela-public-ip"
    kubernetes.io/ingress.allow-http: "false"
    ingress.gcp.kubernetes.io/pre-shared-cert: ''
    ingress.kubernetes.io/ssl-cert: ''
spec:
  rules:
    - host: consuela.domain.com
      http:
        paths:
          - path: /*
            backend:
              serviceName: consuela-service
              servicePort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: consuela-service
  namespace: consuela
  labels:
    app: consuela
  annotations:
    beta.cloud.google.com/backend-config: '{"ports": {"3001":"consuela-backend-config"}}'
spec:
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      targetPort: 3001
      port: 3001
  selector:
    app: consuela
    tier: frontend
